MA_J_19062017_Favicons/Metatags

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
 <head>
   <title>iammai</title>
 
+  <!-- Meta Tags -->
+  <meta name="author" content="Maike Weckenbrock">
+  <meta name="publisher" content="Maike Weckenbrock">
+  <meta name="copyright" content="Maike Weckenbrock">
+  <meta name="description" content="Visual Design und Kreativprojekte in Bochum und Umgebung">
+  <meta name="keywords" content="Maike Weckenbrock, iammai, Gestaltung, Kreative Arbeit, Kreativprojekte,
+   Medienprojekte, Marketing, Werbung, Graphik, Grafik, Graphische Umsetzung,
+   Bochum, Ruhrgebiet, Pott, Deutschland, Dortmund, Essen">
+  <meta name="page-topic" content="Medien">
+  <meta name="page-type" content="Produktinfo">
+  <meta name="audience" content="Alle"><meta http-equiv="content-language" content="de">
+  <meta name="robots" content="index, follow">
+
   <!-- Favicon Integration -->
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9dedc7">
+  <meta name="apple-mobile-web-app-title" content="iammai">
+  <meta name="application-name" content="iammai">
+  <meta name="theme-color" content="#9dedc7">
   <!-- Stylesheet -->
-
+  <link href="css/style.css" type="text/css" rel="stylesheet">
   <!-- Font Integration -->
-
+  
   <!-- JQuery Integration -->
 
   <!-- Google Analytics Tracking -->
@@ -30,12 +50,14 @@
     ga('send', 'pageview');
   </script>
 </head>
+
 <body>
   <div class="container content">
 
   </div>
   <div class="container menu">
-    
+
   </div>
 </body>
+
 </html>
