MA_J_20062017_Midnight_commit_with_images

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   <meta name="robots" content="index, follow">
 
   <!-- Favicon Integration -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#9dedc7">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="manifest.json">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#9dedc7">
   <meta name="apple-mobile-web-app-title" content="iammai">
   <meta name="application-name" content="iammai">
   <meta name="theme-color" content="#9dedc7">
   <!-- Stylesheet -->
   <link href="css/style.css" type="text/css" rel="stylesheet">
   <!-- Font Integration -->
-  
+
   <!-- JQuery Integration -->
 
   <!-- Google Analytics Tracking -->
@@ -52,10 +52,10 @@
 </head>
 
 <body>
-  <div class="container content">
-
+  <div class="background">
+    <img class="logo" src="./images/Logo-Website.svg" alt="Logo" />
   </div>
-  <div class="container menu">
+  <div class="content">
 
   </div>
 </body>
