--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <!-- Font Integration -->
 
   <!-- JQuery Integration -->
-
+  <script src="js/http_code.jquery.com_jquery-latest.js"></script>
+  <!-- Viewport Setup -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Google Analytics Tracking -->
   <script>
     (function(i, s, o, g, r, a, m) {
@@ -52,6 +54,7 @@
 </head>
 
 <body>
+  <script src="js/index.js"></script>
   <div class="background">
     <img class="logo" src="./images/Logo-Website.svg" alt="Logo" />
   </div>
