MA_J_22062017_SinglePageRouting-Integration

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
    Bochum, Ruhrgebiet, Pott, Deutschland, Dortmund, Essen">
   <meta name="page-topic" content="Medien">
   <meta name="page-type" content="Produktinfo">
-  <meta name="audience" content="Alle"><meta http-equiv="content-language" content="de">
+  <meta name="audience" content="Alle">
+  <meta http-equiv="content-language" content="de">
   <meta name="robots" content="index, follow">
 
   <!-- Favicon Integration -->
@@ -56,10 +57,32 @@
 <body>
   <script src="js/index.js"></script>
   <div class="background">
-    <img class="logo" src="./images/Logo-Website.svg" alt="Logo" />
+    <div class="logobox">
+      <img class="logo" src="./images/Logo-Website.svg" alt="Logo" />
+    </div>
   </div>
-  <div class="content">
-
+  <div class="menubox">
+    <div class="menu">
+      <a href="#Portfolio" class="menulink portfoliolink">Portfolio</a>
+      <a href="#About" class="menulink aboutlink">About</a>
+      <a href="#Kontakt" class="menulink kontaktlink">Kontakt</a>
+      <a href="#Impressum" class="menulink impressumlink">Impressum</a>
+    </div>
+  </div>
+  <div class="content portfolio">
+    Portfolio
+  </div>
+  <div class="content about">
+    About
+  </div>
+  <div class="content kontakt">
+    Kontakt
+  </div>
+  <div class="content impressum">
+    Impressum
+  </div>
+  <div class="content errorpage">
+    Error
   </div>
 </body>
 
