--- a/index.html
+++ b/index.html
@@ -69,17 +69,140 @@
       <a href="#Impressum" class="menulink impressumlink">Impressum</a>
     </div>
   </div>
+
+  <!-- Portfolio -->
+
   <div class="content portfolio">
     Portfolio
   </div>
+
+  <!-- About -->
+
   <div class="content about">
     About
   </div>
+
+  <!-- Kontakt -->
+
   <div class="content kontakt">
-    Kontakt
+    <div class="contentbox">
+      <div class="contactdata divinner">
+        Maike Weckenbrock<br> Neustraße 13<br> 44787 Bochum<br>
+        <br> E-Mail:
+        <script type="text/javascript">
+          document.write('<a href="mailto:' + first + '@' + last + '">' + first + '@' + last + '<\/a>');
+        </script>
+        <noscript>
+                  Bitte Javascript aktivieren!.
+              </noscript>
+        <br>Telefon: ???
+      </div>
+      <div class="contactformular divinner" id="contactf">
+        <script type="text/javascript" src="./js/ajaxform.js"></script>
+        <form method="post" action="./php/submit.php" class="ajaxform">
+
+          <p><label for="name">Name:</label>
+            <br/><input name="name" class="inputs shorti" id="name" placeholder="Name" /></p>
+
+          <p><label for="email">E-Mail:</label>
+            <br/><input name="email" class="inputs shorti" id="email" placeholder="E-Mail" /></p>
+
+          <p class="antispam"><label for="antispam">Lass das hier leer! (Anti-Spam):</label>
+            <br/><input name="url" class="inputs shorti" id="antispam" placeholder="Lass das hier leer! (Antispam)" /></p>
+
+          <p><label for="message">Deine Botschaft:</label>
+            <br/><textarea name="message" rows="10" cols="50" class="inputs" id="message" placeholder="Deine Botschaft..."></textarea></p>
+
+          <p><input type="submit" value="Abschicken" id="sendbutton" /></p>
+
+        </form>
+        <div class="fadein" id="popup1">
+          <div class="fadecenter">
+            <p>&#x2713 Danke, wir kümmern uns drum!</p>
+          </div>
+        </div>
+        <div class="fadein" id="popup2">
+          <div class="fadecenter">
+            <p>&#x2715 Bitte alles ausfüllen! </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <!-- Impressum -->
+
   <div class="content impressum">
-    Impressum
+    <div class="contentbox">
+      <h2>Impressum</h2>
+      <p>Inhaltlich verantwortlich im Sinne von §55 Abs.2 RStV ist: <br><br> Maike Weckenbrock<br>Neustraße 13<br>44787 Bochum
+      </p>
+      <br>
+      <strong>Design</strong>
+      <p>Natürlich von: <a href="https://helge.media"><img src="./images/Marke%20Anker.svg" alt="Marke Anker"
+                                                             id="ankermarke"></a> Helge.Media</p>
+      <br>
+      <h2>Datenschutz</h2>
+      <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+      <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets
+        auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
+      <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p><br/>
+      <h2>Kontaktformular</h2>
+      <p>Wenn Sie uns per Kontaktformular Anfragen zukommen lassen, werden Ihre Angaben aus dem Anfrageformular inklusive der von Ihnen dort angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage und für den Fall von Anschlussfragen bei uns gespeichert.
+        Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.</p>
+      <br/>
+      <h2>Datenschutzerklärung für die Nutzung von Google Analytics</h2>
+      <p>Diese Website nutzt Funktionen des Webanalysedienstes Google Analytics. Anbieter ist die Google Inc., 1600 Amphitheatre Parkway Mountain View, CA 94043, USA.</p>
+      <p>Google Analytics verwendet so genannte "Cookies". Das sind Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung
+        dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert.</p>
+      <p>Mehr Informationen zum Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerklärung von Google: <a href="https://support.google.com/analytics/answer/6004245?hl=de" target="blank" class="implinks">Link
+                zur Datenschutzerklärung</a>
+      </p>
+      <p><strong>Browser Plugin</strong></p>
+      <p>Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden
+        nutzen können. Sie können darüber hinaus die Erfassung der durch den Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem Sie das
+        unter dem folgenden Link verfügbare Browser-Plugin herunterladen und installieren: <a href="https://tools.google.com/dlpage/gaoptout?hl=de" class="implinks" target="_blank">Link zum
+                Plugin</a>
+      </p>
+      <br>
+      <!-- Erklärung für eventuelle Facebook und Instagram Nutzung
+        <h2>Datenschutzerklärung für die Nutzung von Facebook-Plugins (Like-Button)</h2>
+        <p>Auf unseren Seiten sind Plugins des sozialen Netzwerks Facebook, Anbieter Facebook Inc., 1 Hacker Way,
+            Menlo Park, California 94025, USA, integriert. Die Facebook-Plugins erkennen Sie an dem Facebook-Logo
+            oder dem "Like-Button" ("Gefällt mir") auf unserer Seite. Eine Übersicht über die Facebook-Plugins
+            finden Sie hier: <a href="http://developers.facebook.com/docs/plugins/">http://developers.facebook.com/docs/plugins/</a>.
+        </p>
+        <p>Wenn Sie unsere Seiten besuchen, wird über das Plugin eine direkte Verbindung zwischen Ihrem Browser und
+            dem Facebook-Server hergestellt. Facebook erhält dadurch die Information, dass Sie mit Ihrer IP-Adresse
+            unsere Seite besucht haben. Wenn Sie den Facebook "Like-Button" anklicken während Sie in Ihrem
+            Facebook-Account eingeloggt sind, können Sie die Inhalte unserer Seiten auf Ihrem Facebook-Profil
+            verlinken. Dadurch kann Facebook den Besuch unserer Seiten Ihrem Benutzerkonto zuordnen. Wir weisen
+            darauf hin, dass wir als Anbieter der Seiten keine Kenntnis vom Inhalt der übermittelten Daten sowie
+            deren Nutzung durch Facebook erhalten. Weitere Informationen hierzu finden Sie in der
+            Datenschutzerklärung von Facebook unter <a href="http://de-de.facebook.com/policy.php">http://de-de.facebook.com/policy.php</a>.
+        </p>
+        <p>Wenn Sie nicht wünschen, dass Facebook den Besuch unserer Seiten Ihrem Facebook-Nutzerkonto zuordnen
+            kann, loggen Sie sich bitte aus Ihrem Facebook-Benutzerkonto aus.</p><br/>
+        <h2>Datenschutzerklärung für die Nutzung von Instagram</h2>
+        <p>Auf unseren Seiten sind Funktionen des Dienstes Instagram eingebunden. Diese Funktionen werden angeboten
+            durch die Instagram Inc., 1601 Willow Road, Menlo Park, CA, 94025, USA integriert. Wenn Sie in Ihrem
+            Instagram-Account eingeloggt sind können Sie durch Anklicken des Instagram-Buttons die Inhalte unserer
+            Seiten mit Ihrem Instagram-Profil verlinken. Dadurch kann Instagram den Besuch unserer Seiten Ihrem
+            Benutzerkonto zuordnen. Wir weisen darauf hin, dass wir als Anbieter der Seiten keine Kenntnis vom
+            Inhalt der übermittelten Daten sowie deren Nutzung durch Instagram erhalten.</p>
+        <p>Weitere Informationen hierzu finden Sie in der Datenschutzerklärung von Instagram: <a
+                href="http://instagram.com/about/legal/privacy/">http://instagram.com/about/legal/privacy/</a></p>
+        <br/>
+
+    <h2>SSL-Verschlüsselung</h2>
+    <p>Diese Seite nutzt aus Gründen der Sicherheit und zum Schutz der Übertragung vertraulicher Inhalte, wie zum Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschlüsselung. Eine verschlüsselte Verbindung erkennen Sie daran,
+      dass die Adresszeile des Browsers von "http://" auf "https://" wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.</p>
+    <p>Wenn die SSL Verschlüsselung aktiviert ist, können die Daten, die Sie an uns übermitteln, nicht von Dritten mitgelesen werden.</p><br/>
+    <h2>Auskunft, Löschung, Sperrung</h2>
+    <p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empfänger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Hierzu
+      sowie zu weiteren Fragen zum Thema personenbezogene Daten können Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden.
+    </p><br/>-->
+    </div>
   </div>
   <div class="content errorpage">
     Error
