MA_J_23062017_Masonry/RespMenu/ImagesLoaded

--- a/index.html
+++ b/index.html
@@ -68,12 +68,37 @@
       <a href="#Kontakt" class="menulink kontaktlink">Kontakt</a>
       <a href="#Impressum" class="menulink impressumlink">Impressum</a>
     </div>
+    <div class="menuresponsive" id="mobilemenu">
+      <a href="#Portfolio">Portfolio</a><br>
+      <a href="#About">About</a><br>
+      <a href="#Kontakt">Kontakt</a><br>
+      <a href="#Impressum">Impressum</a>
+    </div>
+    <div class="menubutton"><a href="javascript:void(0);" class="icon" id="button1" onclick="respMenu()">&#9776;</a>
+    </div>
   </div>
 
   <!-- Portfolio -->
 
   <div class="content portfolio">
-    Portfolio
+    <script src="./js/masonry.pkgd.min.js"></script>
+    <script src="./js/imagesloaded.pkgd.js"></script>
+    <div class="contentbox portfoliobox">
+      <div class="grid">
+        <div class="grid-sizer">
+
+        </div>
+        <div class="grid-item">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="grid-item">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="grid-item">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- About -->
