--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="#Kontakt" class="menulink kontaktlink">Kontakt</a>
       <a href="#Impressum" class="menulink impressumlink">Impressum</a>
     </div>
-    <div class="menuresponsive" id="mobilemenu">
+    <div class="menuresponsive" id="mobilemenu" onclick="respMenu()">
       <a href="#Portfolio">Portfolio</a><br>
       <a href="#About">About</a><br>
       <a href="#Kontakt">Kontakt</a><br>
@@ -88,16 +88,147 @@
         <div class="grid-sizer">
 
         </div>
+        <!-- 1 -->
         <div class="grid-item">
-          <img src="./images/Hintergrund.png" />
+          <a href="#Fidena"><img src="./images/Hintergrund.png" /></a>
         </div>
+        <!-- 2 -->
         <div class="grid-item">
-          <img src="./images/Hintergrund.png" />
+          <a href="#DAV"><img src="./images/Hintergrund.png" /></a>
         </div>
+        <!-- 3 -->
         <div class="grid-item">
-          <img src="./images/Hintergrund.png" />
+          <a href="#Oszillation"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 4 -->
+        <div class="grid-item grid-item--width2">
+          <a href="#Siebdruck"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 5 -->
+        <div class="grid-item">
+          <a href="#Poster"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 6 -->
+        <div class="grid-item">
+          <a href="#Illustration"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 7 -->
+        <div class="grid-item">
+          <a href="#Magaloge"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 8 -->
+        <div class="grid-item">
+          <a href="#Orderbook"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 9 -->
+        <div class="grid-item">
+          <a href="#Radierung"><img src="./images/Hintergrund.png" /></a>
+        </div>
+        <!-- 10 -->
+        <div class="grid-item">
+          <a href="#nix"><img src="./images/Hintergrund.png" /></a>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- 1 Fidena -->
+
+  <div class="content fidena">
+    <div class="contentbox">
+      <p>
+        Fidena
+      </p>
+    </div>
+  </div>
+
+  <!-- 2 DAV -->
+
+  <div class="content dav">
+    <div class="contentbox">
+      <p>
+        DAV
+      </p>
+    </div>
+  </div>
+
+  <!-- 3 Oszillation -->
+
+  <div class="content oszillation">
+    <div class="contentbox">
+      <p>
+        Oszillation
+      </p>
+    </div>
+  </div>
+
+  <!-- 4 -->
+
+  <div class="content siebdruck">
+    <div class="contentbox">
+      <p>
+        siebdruck
+      </p>
+    </div>
+  </div>
+
+  <!-- 5 -->
+
+  <div class="content poster">
+    <div class="contentbox">
+      <p>
+        poster
+      </p>
+    </div>
+  </div>
+
+  <!-- 6 -->
+
+  <div class="content illustration">
+    <div class="contentbox">
+      <p>
+        illustration
+      </p>
+    </div>
+  </div>
+
+  <!-- 7 -->
+
+  <div class="content magaloge">
+    <div class="contentbox">
+      <p>
+        magaloge
+      </p>
+    </div>
+  </div>
+
+  <!-- 8 -->
+
+  <div class="content orderbook">
+    <div class="contentbox">
+      <p>
+        orderbook
+      </p>
+    </div>
+  </div>
+
+  <!-- 9 -->
+
+  <div class="content radierung">
+    <div class="contentbox">
+      <p>
+        radierung
+      </p>
+    </div>
+  </div>
+
+  <!-- 10 -->
+
+  <div class="content nix">
+    <div class="contentbox">
+      <p>
+        nix
+      </p>
     </div>
   </div>
 
