--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <div class="menu">
       <a href="#Portfolio" class="menulink portfoliolink">Portfolio</a>
       <a href="#About" class="menulink aboutlink">About</a>
+      <span class="space"></span>
       <a href="#Kontakt" class="menulink kontaktlink">Kontakt</a>
       <a href="#Impressum" class="menulink impressumlink">Impressum</a>
     </div>
@@ -88,51 +89,35 @@
         <div class="grid-sizer">
 
         </div>
-        <!-- 1 -->
+        <!-- 6 -->
         <div class="grid-item">
-          <a href="#Fidena"><img src="./images/Hintergrund.png" /></a>
-        </div>
-        <!-- 2 -->
-        <div class="grid-item">
-          <a href="#DAV"><img src="./images/Hintergrund.png" /></a>
-        </div>
-        <!-- 3 -->
-        <div class="grid-item">
-          <a href="#Oszillation"><img src="./images/Hintergrund.png" /></a>
-        </div>
-        <!-- 4 -->
-        <div class="grid-item grid-item--width2">
-          <a href="#Siebdruck"><img src="./images/Hintergrund.png" /></a>
+          <a href="#Fidena"><img src="./images/Fidena-Vorschau.png" /></a>
         </div>
         <!-- 5 -->
         <div class="grid-item">
-          <a href="#Poster"><img src="./images/Hintergrund.png" /></a>
+          <a href="#Radierung"><img src="./images/Radierung-Vorschau.png" /></a>
         </div>
-        <!-- 6 -->
+        <!-- 4 -->
         <div class="grid-item">
-          <a href="#Illustration"><img src="./images/Hintergrund.png" /></a>
+          <a href="#Oszillation"><img src="./images/Oszillation-Vorschau.png" /></a>
         </div>
-        <!-- 7 -->
+        <!-- 3 -->
         <div class="grid-item">
-          <a href="#Magaloge"><img src="./images/Hintergrund.png" /></a>
+          <a href="#Siebdruck"><img src="./images/Siebdruck-Vorschau.png" /></a>
         </div>
-        <!-- 8 -->
+        <!-- 2 -->
         <div class="grid-item">
-          <a href="#Orderbook"><img src="./images/Hintergrund.png" /></a>
+          <a href="#Poster"><img src="./images/Poster-Vorschau.png" /></a>
         </div>
-        <!-- 9 -->
+        <!-- 1 -->
         <div class="grid-item">
-          <a href="#Radierung"><img src="./images/Hintergrund.png" /></a>
-        </div>
-        <!-- 10 -->
-        <div class="grid-item">
-          <a href="#nix"><img src="./images/Hintergrund.png" /></a>
+          <a href="#DAV"><img src="./images/DAV-Vorschau.png" /></a>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- 1 Fidena -->
+  <!-- 6 -->
 
   <div class="content fidena">
     <div class="contentbox">
@@ -142,17 +127,17 @@
     </div>
   </div>
 
-  <!-- 2 DAV -->
+  <!-- 5 -->
 
-  <div class="content dav">
+  <div class="content radierung">
     <div class="contentbox">
       <p>
-        DAV
+        Radierung
       </p>
     </div>
   </div>
 
-  <!-- 3 Oszillation -->
+  <!-- 4 -->
 
   <div class="content oszillation">
     <div class="contentbox">
@@ -162,7 +147,7 @@
     </div>
   </div>
 
-  <!-- 4 -->
+  <!-- 3 -->
 
   <div class="content siebdruck">
     <div class="contentbox">
@@ -172,7 +157,7 @@
     </div>
   </div>
 
-  <!-- 5 -->
+  <!-- 2 -->
 
   <div class="content poster">
     <div class="contentbox">
@@ -182,52 +167,12 @@
     </div>
   </div>
 
-  <!-- 6 -->
+  <!-- 1 -->
 
-  <div class="content illustration">
+  <div class="content dav">
     <div class="contentbox">
       <p>
-        illustration
-      </p>
-    </div>
-  </div>
-
-  <!-- 7 -->
-
-  <div class="content magaloge">
-    <div class="contentbox">
-      <p>
-        magaloge
-      </p>
-    </div>
-  </div>
-
-  <!-- 8 -->
-
-  <div class="content orderbook">
-    <div class="contentbox">
-      <p>
-        orderbook
-      </p>
-    </div>
-  </div>
-
-  <!-- 9 -->
-
-  <div class="content radierung">
-    <div class="contentbox">
-      <p>
-        radierung
-      </p>
-    </div>
-  </div>
-
-  <!-- 10 -->
-
-  <div class="content nix">
-    <div class="contentbox">
-      <p>
-        nix
+        dav
       </p>
     </div>
   </div>
