--- a/index.html
+++ b/index.html
@@ -130,17 +130,22 @@
           Fidena Marlena
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
         </p>
       </div>
-      <div class="picturebox">
-        <div>
+      <div class="picturebox p-six">
+        <div class="slide">
+          <img src="./images/Fidena-Vorschau.png" />
+        </div>
+        <div class="slide">
           <img src="./images/Hintergrund.png" />
         </div>
-        <div>
-          <img src="./images/Hintergrund.png" />
-        </div>
-        <div>
+        <div class="slide">
           <img src="./images/Hintergrund.png" />
         </div>
       </div>
@@ -151,9 +156,30 @@
 
   <div class="content radierung">
     <div class="contentbox projectbox">
-      <p>
-        Radierung
-      </p>
+      <div class="textbox">
+        <h3>
+          Radierungs Power
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
+        </p>
+      </div>
+      <div class="picturebox p-five">
+        <div class="slide">
+          <img src="./images/Radierung-Vorschau.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
     </div>
   </div>
 
@@ -161,9 +187,30 @@
 
   <div class="content oszillation">
     <div class="contentbox projectbox">
-      <p>
-        Oszillation
-      </p>
+      <div class="textbox">
+        <h3>
+          Oszillations Gedöns
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
+        </p>
+      </div>
+      <div class="picturebox p-four">
+        <div class="slide">
+          <img src="./images/Oszillation-Vorschau.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
     </div>
   </div>
 
@@ -171,9 +218,30 @@
 
   <div class="content siebdruck">
     <div class="contentbox projectbox">
-      <p>
-        siebdruck
-      </p>
+      <div class="textbox">
+        <h3>
+          Siebgedrucktes
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
+        </p>
+      </div>
+      <div class="picturebox p-three">
+        <div class="slide">
+          <img src="./images/Siebdruck-Vorschau.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
     </div>
   </div>
 
@@ -181,9 +249,30 @@
 
   <div class="content poster">
     <div class="contentbox projectbox">
-      <p>
-        poster
-      </p>
+      <div class="textbox">
+        <h3>
+          Poster Popo
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
+        </p>
+      </div>
+      <div class="picturebox p-two">
+        <div class="slide">
+          <img src="./images/Poster-Vorschau.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
     </div>
   </div>
 
@@ -191,9 +280,30 @@
 
   <div class="content dav">
     <div class="contentbox projectbox">
-      <p>
-        dav
-      </p>
+      <div class="textbox">
+        <h3>
+          DAV Berghain
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+        </p>
+        <p>
+          <a href="#Portfolio">Zurück</a>
+        </p>
+      </div>
+      <div class="picturebox p-one">
+        <div class="slide">
+          <img src="./images/DAV-Vorschau.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/Hintergrund.png" />
+        </div>
+      </div>
     </div>
   </div>
 
