--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
         </div>
         <!-- 6 -->
         <div class="grid-item">
-          <a href="#Fidena"><img src="./images/Fidena-Vorschau.png" /></a>
+          <a href="#Fidena"><img src="./images/vorschau/Fidena-Vorschau.png" /></a>
         </div>
         <!-- 5 -->
         <div class="grid-item">
-          <a href="#Radierung"><img src="./images/Radierung-Vorschau.png" /></a>
+          <a href="#Radierung"><img src="./images/vorschau/Radierung-Vorschau.png" /></a>
         </div>
         <!-- 4 -->
         <div class="grid-item">
-          <a href="#Oszillation"><img src="./images/Oszillation-Vorschau.png" /></a>
+          <a href="#Oszillation"><img src="./images/vorschau/Oszillation-Vorschau.png" /></a>
         </div>
         <!-- 3 -->
         <div class="grid-item">
-          <a href="#Siebdruck"><img src="./images/Siebdruck-Vorschau.png" /></a>
+          <a href="#Siebdruck"><img src="./images/vorschau/Siebdruck-Vorschau.png" /></a>
         </div>
         <!-- 2 -->
         <div class="grid-item">
-          <a href="#Poster"><img src="./images/Poster-Vorschau.png" /></a>
+          <a href="#Titus"><img src="./images/vorschau/Poster-Vorschau.png" /></a>
         </div>
         <!-- 1 -->
         <div class="grid-item">
-          <a href="#DAV"><img src="./images/DAV-Vorschau.png" /></a>
+          <a href="#DAV"><img src="./images/vorschau/DAV-Vorschau.png" /></a>
         </div>
       </div>
     </div>
@@ -127,12 +127,11 @@
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          Fidena Marlena
+          Flyer "Fidena"
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          2016 hatte ich die Gelegenheit den Flyer für „Fidena - Das Deutsche Forum für Figurentheater und Puppenspielkunst“ in Bochum zu gestalten. Entstanden ist ein wandelbarer Flyer im Postkartenformat, der sich, mit ein paar Handgriffen, in eine Puppe verwandeln
+          lässt.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -140,13 +139,7 @@
       </div>
       <div class="picturebox p-six">
         <div class="slide">
-          <img src="./images/Fidena-Vorschau.png" />
-        </div>
-        <div class="slide">
-          <img src="./images/Hintergrund.png" />
-        </div>
-        <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Fidena/1.png" />
         </div>
       </div>
     </div>
@@ -158,12 +151,10 @@
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          Radierungs Power
+          Radierung
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Kupferplatten, Abdeckschicht, Ritzen, Nadeln, Säure. Die Ätzradierung ist eine wunderbare Tiefdrucktechnik die ich im 3ten Semester meines Studiums erlernt habe.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -171,13 +162,16 @@
       </div>
       <div class="picturebox p-five">
         <div class="slide">
-          <img src="./images/Radierung-Vorschau.png" />
+          <img src="./images/projekte/Radierung/1.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Radierung/2.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Radierung/3.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Radierung/4.png" />
         </div>
       </div>
     </div>
@@ -189,12 +183,13 @@
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          Oszillations Gedöns
+          Bachelorarbeit Oszillation
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Elektromagnetische Strahlung. Wo tritt sie überall auf? Wie wirkt sie auf den Menschen? Welche Ängste werden durch sie augelöst? Sind diese Ängste berechtigt? Das Strahlenvolumen hat besonders in den letzten 10 Jahren rasant zugenommen. Immer mehr Geräte
+          verlieren ihre Kabel und es gibt längst nicht mehr nur ein Handynetz. In meiner Bachelorarbeit mache ich mich auf die Suche nach Geschichten und Opfern elektromagnetischer Strahlung. Beleuchte den physikalischen Hintergrund und betrachte die
+          biologischen Auswirkungen in unserer Umwelt. <br /><br /> Das Highlight der Gestaltung ist die Wellengrafik, die sich ab dem Cover bis hin zum Backcover durch mein gesamtes Buch zieht. Je nach besprochener Strahlenart oder Emotionen
+          im Text passt sich die Wellengrafik individuell an. Die Wellengrafik hat eine Gesamtlänge von 25,92m. <br /><br /> Meine Bachelorarbeit wurde mit einer 1,15 bewertet.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -202,13 +197,46 @@
       </div>
       <div class="picturebox p-four">
         <div class="slide">
-          <img src="./images/Oszillation-Vorschau.png" />
+          <img src="./images/projekte/Oszillation/1.JPG" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Oszillation/2.JPG" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Oszillation/3.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/4.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/5.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/6.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/7.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/8.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/9.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/10.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/11.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/12.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/13.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Oszillation/14.JPG" />
         </div>
       </div>
     </div>
@@ -220,12 +248,10 @@
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          Siebgedrucktes
+          Siebdrucke
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Siebdrucke die im 6ten Semester meines Studiums entstanden sind. Die Illustrationen und Elemente des Motives, sowie die Farbentwürfe sind nach eigenem Design entwickelt worden.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -233,13 +259,13 @@
       </div>
       <div class="picturebox p-three">
         <div class="slide">
-          <img src="./images/Siebdruck-Vorschau.png" />
+          <img src="./images/projekte/Siebdruck/1.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Siebdruck/2.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Siebdruck/3.png" />
         </div>
       </div>
     </div>
@@ -247,16 +273,15 @@
 
   <!-- 2 -->
 
-  <div class="content poster">
+  <div class="content titus">
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          Poster Popo
+          Titus Magaloge
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Mein Praxissemester verbrachte ich bei der Cardiac Communication in Münster. In den Titus Magalogen (Magazin + Katalog) Winter 2012/2013 und Frühling/Sommer 2013 layoutete ich jeweils die Hardware-Seiten. Im Magalog Winter 2012/2013 durfte ich zudem einen
+          Artikel layouten.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -264,13 +289,40 @@
       </div>
       <div class="picturebox p-two">
         <div class="slide">
-          <img src="./images/Poster-Vorschau.png" />
+          <img src="./images/projekte/Magaloge_Website/1.JPG" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Magaloge_Website/2.JPG" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Magaloge_Website/3.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/4.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/5.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/6.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/7.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/8.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/9.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/10.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/11.JPG" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Magaloge_Website/12.JPG" />
         </div>
       </div>
     </div>
@@ -282,12 +334,12 @@
     <div class="contentbox projectbox">
       <div class="textbox">
         <h3>
-          DAV Berghain
+          Logo
         </h3>
         <p>
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-          diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolore
+          Ein Logo ist ein grafisches Zeichen, das ein bestimmtes Subjekt repräsentiert – z.B. ein Unternehmen, eine Organisation, eine Privatpersonen oder ein Produkt. Das Logo repräsentiert die dahinterstehende Marke und gibt idealerweise gleich einen Einblick,
+          was sich hinter der zugehörigen Marke versteckt. Auf dieser Seite findet sich das Logo für die DAV Berghütten der Sektion Berlin, das im 6ten Semester in Teamarbeit entstand, mein eigenes Logo inklusive Visitenkarte und die Bildmarke für
+          einen befreundeten DaWanda-Shop, das in eine verspielte und „handgemachte“ Richtung geht.
         </p>
         <p>
           <a href="#Portfolio">Zurück</a>
@@ -295,13 +347,16 @@
       </div>
       <div class="picturebox p-one">
         <div class="slide">
-          <img src="./images/DAV-Vorschau.png" />
+          <img src="./images/projekte/Logo/1.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Logo/2.png" />
         </div>
         <div class="slide">
-          <img src="./images/Hintergrund.png" />
+          <img src="./images/projekte/Logo/3.png" />
+        </div>
+        <div class="slide">
+          <img src="./images/projekte/Logo/4.png" />
         </div>
       </div>
     </div>
