--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
         </div>
         <!-- 6 -->
         <div class="grid-item">
-          <a href="#Fidena"><img src="./images/vorschau/Fidena-Vorschau.png" /></a>
+          <a href="#Fidena"><img src="./images/vorschau/Fidena-Vorschau.jpg" /></a>
         </div>
         <!-- 5 -->
         <div class="grid-item">
-          <a href="#Radierung"><img src="./images/vorschau/Radierung-Vorschau.png" /></a>
+          <a href="#Radierung"><img src="./images/vorschau/Radierung-Vorschau.jpg" /></a>
         </div>
         <!-- 4 -->
         <div class="grid-item">
-          <a href="#Oszillation"><img src="./images/vorschau/Oszillation-Vorschau.png" /></a>
+          <a href="#Oszillation"><img src="./images/vorschau/Oszillation-Vorschau.jpg" /></a>
         </div>
         <!-- 3 -->
         <div class="grid-item">
-          <a href="#Siebdruck"><img src="./images/vorschau/Siebdruck-Vorschau.png" /></a>
+          <a href="#Siebdruck"><img src="./images/vorschau/Siebdruck-Vorschau.jpg" /></a>
         </div>
         <!-- 2 -->
         <div class="grid-item">
-          <a href="#Titus"><img src="./images/vorschau/Poster-Vorschau.png" /></a>
+          <a href="#Titus"><img src="./images/vorschau/Titus-Vorschau.jpg" /></a>
         </div>
         <!-- 1 -->
         <div class="grid-item">
-          <a href="#DAV"><img src="./images/vorschau/DAV-Vorschau.png" /></a>
+          <a href="#DAV"><img src="./images/vorschau/DAV-Vorschau.jpg" /></a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
       </div>
       <div class="picturebox p-six">
         <div class="slide">
-          <img src="./images/projekte/Fidena/1.png" />
+          <img src="./images/projekte/Fidena/1.jpg" />
         </div>
       </div>
     </div>
@@ -162,16 +162,16 @@
       </div>
       <div class="picturebox p-five">
         <div class="slide">
-          <img src="./images/projekte/Radierung/1.png" />
+          <img src="./images/projekte/Radierung/1.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Radierung/2.png" />
+          <img src="./images/projekte/Radierung/2.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Radierung/3.png" />
+          <img src="./images/projekte/Radierung/3.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Radierung/4.png" />
+          <img src="./images/projekte/Radierung/4.jpg" />
         </div>
       </div>
     </div>
@@ -197,46 +197,34 @@
       </div>
       <div class="picturebox p-four">
         <div class="slide">
-          <img src="./images/projekte/Oszillation/1.JPG" />
+          <img src="./images/projekte/Oszillation/1.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/2.JPG" />
+          <img src="./images/projekte/Oszillation/2.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/3.JPG" />
+          <img src="./images/projekte/Oszillation/3.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/4.JPG" />
+          <img src="./images/projekte/Oszillation/4.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/5.JPG" />
+          <img src="./images/projekte/Oszillation/5.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/6.JPG" />
+          <img src="./images/projekte/Oszillation/10.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/7.JPG" />
+          <img src="./images/projekte/Oszillation/11.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/8.JPG" />
+          <img src="./images/projekte/Oszillation/12.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/9.JPG" />
+          <img src="./images/projekte/Oszillation/13.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Oszillation/10.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Oszillation/11.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Oszillation/12.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Oszillation/13.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Oszillation/14.JPG" />
+          <img src="./images/projekte/Oszillation/14.jpg" />
         </div>
       </div>
     </div>
@@ -259,13 +247,13 @@
       </div>
       <div class="picturebox p-three">
         <div class="slide">
-          <img src="./images/projekte/Siebdruck/1.png" />
+          <img src="./images/projekte/Siebdruck/1.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Siebdruck/2.png" />
+          <img src="./images/projekte/Siebdruck/2.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Siebdruck/3.png" />
+          <img src="./images/projekte/Siebdruck/3.jpg" />
         </div>
       </div>
     </div>
@@ -289,40 +277,28 @@
       </div>
       <div class="picturebox p-two">
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/1.JPG" />
+          <img src="./images/projekte/Magaloge_Website/1.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/2.JPG" />
+          <img src="./images/projekte/Magaloge_Website/2.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/3.JPG" />
+          <img src="./images/projekte/Magaloge_Website/3.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/4.JPG" />
+          <img src="./images/projekte/Magaloge_Website/4.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/5.JPG" />
+          <img src="./images/projekte/Magaloge_Website/5.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/6.JPG" />
+          <img src="./images/projekte/Magaloge_Website/6.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/7.JPG" />
+          <img src="./images/projekte/Magaloge_Website/7.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/8.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/9.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/10.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/11.JPG" />
-        </div>
-        <div class="slide">
-          <img src="./images/projekte/Magaloge_Website/12.JPG" />
+          <img src="./images/projekte/Magaloge_Website/8.jpg" />
         </div>
       </div>
     </div>
@@ -347,16 +323,16 @@
       </div>
       <div class="picturebox p-one">
         <div class="slide">
-          <img src="./images/projekte/Logo/1.png" />
+          <img src="./images/projekte/Logo/1.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Logo/2.png" />
+          <img src="./images/projekte/Logo/2.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Logo/3.png" />
+          <img src="./images/projekte/Logo/3.jpg" />
         </div>
         <div class="slide">
-          <img src="./images/projekte/Logo/4.png" />
+          <img src="./images/projekte/Logo/4.jpg" />
         </div>
       </div>
     </div>
