--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 <body>
   <script src="js/index.js"></script>
   <div class="background">
-    <div class="logobox">
-      <img class="logo" src="./images/Logo-Website.svg" alt="Logo" />
+
+  </div>
+  <div class="logobox">
+    <div class="logocontainer">
+      <a href="#Portfolio"><img class="logo" src="./images/Logo-Website.svg" alt="Logo" /></a>
     </div>
   </div>
   <div class="menubox">
