--- a/index.html
+++ b/index.html
@@ -343,7 +343,17 @@
   <!-- About -->
 
   <div class="content about">
-    About
+    <div class="contentbox">
+      <div class="maikebild divinner">
+        <img class="maibild" src="./images/AboutMaikeWeckenbrockGrafik.jpg" />
+      </div>
+      <div class="maiketext divinner">
+        <h2>Check mich ab.</h2>
+        <p>
+          Monogo Text als Platzhalter.
+        </p>
+      </div>
+    </div>
   </div>
 
   <!-- Kontakt -->
