--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
   <div class="menubox">
     <div class="menu">
       <a href="#Portfolio" class="menulink portfoliolink">Portfolio</a>
-      <a href="#About" class="menulink aboutlink">About</a>
+      <a href="#About" class="menulink aboutlink">About & Angebot</a>
       <span class="space"></span>
       <a href="#Kontakt" class="menulink kontaktlink">Kontakt</a>
       <a href="#Impressum" class="menulink impressumlink">Impressum</a>
     </div>
     <div class="menuresponsive" id="mobilemenu" onclick="respMenu()">
       <a href="#Portfolio">Portfolio</a><br>
-      <a href="#About">About</a><br>
+      <a href="#About">About & Angebot</a><br>
       <a href="#Kontakt">Kontakt</a><br>
       <a href="#Impressum">Impressum</a>
     </div>
@@ -348,9 +348,14 @@
         <img class="maibild" src="./images/AboutMaikeWeckenbrockGrafik.jpg" />
       </div>
       <div class="maiketext divinner">
-        <h2>Check mich ab.</h2>
+        <h2>Hey!</h2>
         <p>
-          Monogo Text als Platzhalter.
+          Schön, dass du auf meiner Seite gelandet bist. Ich bin Maike, ursprünglich norddeutsch und nun in Bochum untergekommen. Auf meiner Seite findest du eine Auswahl verschiedenster Projekte. Dabei sind mir ein gutes Konzept und Individualität besonders
+          wichtig. <br><br>
+          Mein Angebot umfasst Illustrationen, Editorial und Layoutarbeiten wie Bücher, Flyer und Zeitschriften. Auch das Erstellen einer kompletten Corporate Identity, sowie Verbesserungen für ein bestehendes Corporate Design inklusive Werbemitteln und dem Design für Webauftritte biete ich gerne an.<br><br>
+          Lust bekommen, mit mir zu arbeiten?<br>
+          Dann nimm doch einfach <a href="#Kontakt">Kontakt</a> mit mir auf!<br><br>
+          Ich freue mich von dir zu hören.
         </p>
       </div>
     </div>
