Added Psychotherapie Tekath Referenz

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
           <div class="grid-sizer">
 
           </div>
+          <!-- 7 -->
+          <div class="grid-item">
+            <a href="#Tekath"><img src="./images/vorschau/Tekath-Vorschau.png" /></a>
+          </div>
           <!-- 6 -->
           <div class="grid-item">
             <a href="#Fidena"><img src="./images/vorschau/Fidena-Vorschau.jpg" /></a>
@@ -124,6 +128,46 @@
       </div>
     </div>
   </div>
+
+  <!-- 7 -->
+
+  <div class="content tekath">
+    <div class="inner">
+      <div class="contentbox projectbox">
+        <div class="textbox">
+          <h3>
+          Corporate Design Psychotherapie Tekath
+        </h3>
+          <p>
+            Für die Psychotherapeutin Stefanie Tekath durfte ich ein komplettes Corporate Design und ihren Webauftritt gestalten.
+            Der ist natürlich Responsive und auf jedes Wiedergabemedium perfekt angepasst. On top gibt es hier noch ein paar Logoskizzen
+            und einige Anwendungsbeispiele.
+            <br>
+            <br>
+            <a href= "https://www.psychotherapie-tekath.de" target="_blank">Psychotherapie Tekath</a>
+          </p>
+          <p>
+            <a href="#Portfolio">Zurück</a>
+          </p>
+        </div>
+        <div class="picturebox p-seven">
+          <div class="slide">
+            <img src="./images/projekte/Tekath/1.png" />
+          </div>
+          <div class="slide">
+            <img src="./images/projekte/Tekath/2.png" />
+          </div>
+          <div class="slide">
+            <img src="./images/projekte/Tekath/3.png" />
+          </div>
+          <div class="slide">
+            <img src="./images/projekte/Tekath/4.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!-- 6 -->
 
